--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -41,8 +41,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="text-align-box">
+                <p class="ptext">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -54,7 +54,7 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+              <p class="pmargin">margin</p>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
