レイアウトパーツ完了

--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -38,15 +38,19 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+          <div class="content">    
+            
+              <div class="box- hati">8</div>
+              <div class="box- go">5</div>
+              <div class="box- iti">1</div>
+              <div class="box- nana">7</div>
+              <div class="box- yon">4</div>
+              <div class="box- roku">6</div>
+              <div class="box- ni">2</div>
+              <div class="box- san">3</div>
+              <div class="box- kyu">9</div>
+          
+          </div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
