--- a/layout_parts/q8/index.html
+++ b/layout_parts/q8/index.html
@@ -32,26 +32,26 @@
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q8 q8--btn">
             <p class="q8__title">ー small ー</p>
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <div class="small common">common</div>
+            <div class="small error">error</div>
+            <div class="small disabled">disabled</div>
+            <div class="small shadow">shadow</div>
           </div>
 
           <div class="q8 q8--btn">
             <p class="q8__title">ー middle ー</p>
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <div class="middle common">common</div>
+            <div class="middle error">error</div>
+            <div class="middle disabled">disabled</div>
+            <div class="middle shadow">shadow</div>
           </div>
 
           <div class="q8 q8--btn">
             <p class="q8__title">ー large ー</p>
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <div class="large common">common</div>
+            <div class="large error">error</div>
+            <div class="large disabled">disabled</div>
+            <div class="large shadow">shadow</div>
           </div>
           <!-- 回答はここに書いてね -->
         </div>
@@ -99,7 +99,78 @@
           <!-- 回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleを付ける場合は自分で新たにクラスをつけること -->
           <div class="q8">
-            
+            <form class="parent">
+              <div class="form_title">
+                <p class="title_text">Form Exercise</p>
+              </div>
+
+
+              <div class="clearfix">
+                <div class="q8_main">
+                  <ul class="list">
+                    <li class="clearfix"><p class="list_title">名前<span class="namae_akuse">*</span></p>
+                      <div class="name_form">
+                       <input class="q8__input q8__input--init" type="text" name="name" required="">
+                      </div>
+                    </li>
+
+                    <li class="clearfix"><p class="list_title">性別</p>
+                      <div class="name_form">
+                          <label class="radio_gender">
+                            <input type="radio" class="seibetu" name="gender" value="男性">
+                            <span class="gender">男性</span>
+                          </label>
+                          <label class="radio_gender">
+                            <input type="radio" class="seibetu" name="gender" value="女性">
+                            <span class="gender">女性</span>
+                          </label>
+                      </div>
+                    </li>
+
+                    <li class="clearfix"><p class="list_title">出身</p>
+                      <div class="name_form from">
+                        <select name="syussin" class="select">
+                            <option value="選択肢1">東京</option>
+                            <option value="選択肢2">埼玉</option>
+                            <option value="選択肢3">千葉</option>
+                            <option value="選択肢4">神奈川</option>
+                        </select>
+                      </div>
+                    </li>
+
+                    <li class="clearfix"><p class="list_title">Eメール<span class="namae_akuse">*</span></p>
+                      <div class="name_form">
+                        <input class="q8__input q8__input--init" type="email" name="mail" placeholder="ex) hoga@gmail.com" required="">
+                      </div>
+                    </li>
+
+                    <li class="clearfix"><p class="list_title">電話番号</p>
+                      <div class="name_form">
+                        <input class="q8__input q8__input--init" type="tel" name="number" placeholder="ex) 08012345678" required="">
+                      </div>
+                    </li>
+
+                    <li class="clearfix">
+                      <div class="checkbox">
+                        <input type="checkbox" class="checkbox_btn" name="seijin" value="1" id="checkbox">
+                        <label for="checkbox" class="checkbox-text">20歳以上です</label>
+                      </div>
+                    </li>
+                  </ul>
+
+                  <div class="sousin_bottan">
+                      <input class="submit_button" type="submit" name="submit" value=送信>
+                  </div>
+                  
+                </div>
+                <div class="side">
+                    <textarea class="q8__side__text q8__input--init" name="message" placeholder="何かあれば入力してください。"></textarea>
+                </div>
+
+
+
+              </div>
+            </form>
           </div>
           <!-- 回答はここに書いてね -->
         </div>
