--- a/layout_parts/q9/index.html
+++ b/layout_parts/q9/index.html
@@ -42,11 +42,20 @@
           <!-- 回答はクラスq9の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <div class="q9">
+            <div class="gazou">
+              <img class="gazou_jpg" src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q9/thumb.jpg">
             
+              <div class="text_parent">
+                  <p class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
+                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint 
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  </p>
+              </div>
+            </div>
           </div>
           <!-- 回答はクラスq9の要素の中に書いてね -->
         </div>
-
         <div class="box__inner">
           <h3 class="box__headline">
             <p class="box__headline__text">ー Q9-2 animation ー</p>
@@ -63,7 +72,14 @@
           <!-- 回答はクラスq9の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <div class="q9">
-            
+            <div class="anime"></div>
+
+
+
+
+
+
+
           </div>
           <!-- 回答はクラスq9の要素の中に書いてね -->
         </div>
