レビュー後の直しです。主に改行とクラス名です。

--- a/layout_parts/q3/index.html
+++ b/layout_parts/q3/index.html
@@ -40,7 +40,7 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <div class="q3">
           
-          <table class="table_contents" border="1">
+          <table class="table_contents">
                 <tr>
                   <th>日付</th><th>朝ごはん</th><th>昼ごはん</th><th>おやつ</th><th>夜ご飯</th><th>夜食</th>
                 </tr>
