--- a/layout_parts/q9/index.html
+++ b/layout_parts/q9/index.html
@@ -42,8 +42,8 @@
           <!-- 回答はクラスq9の要素の中に書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <div class="q9">
-            <div class="gazou">
-              <img class="gazou_jpg" src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q9/thumb.jpg">
+            <div class="img">
+              <img class="img_jpg" src="http://gizumo-inc.github.io/sample/front-lesson/layout_parts_new/assets/img/q9/thumb.jpg">
             
               <div class="text_parent">
                   <p class="text">
