--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -39,17 +39,15 @@
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
           <div class="content">    
-            
-              <div class="box- hati">8</div>
-              <div class="box- go">5</div>
-              <div class="box- iti">1</div>
-              <div class="box- nana">7</div>
-              <div class="box- yon">4</div>
-              <div class="box- roku">6</div>
-              <div class="box- ni">2</div>
-              <div class="box- san">3</div>
-              <div class="box- kyu">9</div>
-          
+              <div class="color-box eight">8</div>
+              <div class="color-box five">5</div>
+              <div class="color-box one">1</div>
+              <div class="color-box seven">7</div>
+              <div class="color-box four">4</div>
+              <div class="color-box six">6</div>
+              <div class="color-box two">2</div>
+              <div class="color-box three">3</div>
+              <div class="color-box nine">9</div>
           </div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
